--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
 
             <div class="form-group">
-                <input type="Submit" value="Submit Application Form">
+                <input type="Submit" value="Submit Application form">
             </div>
         </form>
 
