--- a/index.html
+++ b/index.html
@@ -159,9 +159,13 @@
             </div>
 
             <div class="form-group">
-                <input type="Submit" value="Submit Application form">
+                <input type="Submit" value="Submit Application-form">
+            </div>
+            <div class="done">
+                <input type="Done" value="Done">
             </div>
         </form>
+
 
     </div>
 
