--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
 
             <div class="form-group">
-                <input type="Submit" value="Submit Application-form">
+                <input type="Submit" value="Submit Application_Ramsy">
             </div>
             <div class="done">
                 <input type="Done" value="Done">
