--- a/index.html
+++ b/index.html
@@ -159,11 +159,9 @@
             </div>
 
             <div class="form-group">
-                <input type="Submit" value="Submit Application_Ramsy">
+                <input type="Submit" value="Application">
             </div>
-            <div class="done">
-                <input type="Done" value="Done">
-            </div>
+           
         </form>
 
 
